force-app/main/default/objects/Cycle_Medication__c/fields/Cycle_Day_Column_Number__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Day_Column_Number__c</fullName>
    <label>Cycle Day Column Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>