force-app/main/default/objects/Cycle_Medication__c/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosage</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>