force-app/main/default/objects/Cycle_Medication__c/fields/Linked_Master_Medication__c.field-meta.xml
<CustomField>
    <fullName>Linked_Master_Medication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Master Medication</label>
    <referenceTo>Master_Medication_List__c</referenceTo>
    <relationshipLabel>Cycle Medications</relationshipLabel>
    <relationshipName>Cycle_Medications</relationshipName>
    <type>Lookup</type>
</CustomField>