force-app/main/default/objects/Cycle_Medication__c/fields/Medication_Cycle_Day_Discription__c.field-meta.xml
<CustomField>
    <fullName>Medication_Cycle_Day_Discription__c</fullName>
    <label>Medication Cycle Day Discription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>