force-app/main/default/objects/Cycle_Medication__c/fields/Medication_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Medication_End_Date__c</fullName>
    <label>Medication End Date</label>
    <type>Date</type>
</CustomField>