force-app/main/default/objects/Cycle_Medication__c/fields/Medication_Information__c.field-meta.xml
<CustomField>
    <fullName>Medication_Information__c</fullName>
    <label>Medication Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>