force-app/main/default/objects/Cycle_Medication__c/fields/Medication_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Medication_Start_Day__c</fullName>
    <label>Medication Start Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>