force-app/main/default/objects/Cycle_Medication__c/fields/Medication_Type__c.field-meta.xml
<CustomField>
    <fullName>Medication_Type__c</fullName>
    <formula>TEXT(Linked_Master_Medication__r.Medication_Type__c)</formula>
    <label>Medication Type</label>
    <type>Text</type>
</CustomField>