force-app/main/default/objects/Cycle_Medication__c/fields/Number_of_Repeats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Repeats__c</fullName>
    <defaultValue>(1)</defaultValue>
    <label>Number of Repeats</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>