force-app/main/default/objects/Cycle_Medication__c/fields/System_Update__c.field-meta.xml
<CustomField>
    <fullName>System_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Update</label>
    <type>Checkbox</type>
</CustomField>