force-app/main/default/objects/Cycle_Medication__c/fields/Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time__c</fullName>
    <formula>IF( TEXT(Linked_Master_Medication__r.Medication_Type__c) = &quot;Trigger&quot;,  Linked_Master_Medication__r.Trigger_Delay_in_Hours__c ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>